--- a/LearnOpenGl/LearnOpenGl.vcxproj.filters
+++ b/LearnOpenGl/LearnOpenGl.vcxproj.filters
@@ -15,18 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="LearnOpenGl.cpp">
+    <ClCompile Include="01-FirstWindow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
